it seems fRegisteredApps also lists not fully running apps, so we add a check for the state APP_STATE_REGISTERED. this fixes the ticket #627. Ingo, could you review ? This check might also be needed at other places.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@20014 a95241bf-73f2-0310-859d-f6bbb57e9c96